--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+## Application name
+spring.application.name=downuploadfile
+
+## Server port
+server.port=9000
+
+## Multipart config
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=215MB
+
+## File upload custom properties
+file.upload.location=C:/Users/azhwani/uploads
 
